fixed home responsiveness on tablets

--- a/styles/home/buySapling.module.scss
+++ b/styles/home/buySapling.module.scss
@@ -29,7 +29,7 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	font-size: 2vw;
+	font-size: 3rem;
 	color: #484041;
 }
 
@@ -48,10 +48,10 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	justify-content: center;
 
 	h1{
 		font-size: 3.8rem;
-		margin-top: 8rem;
 		font-weight: bold;
 	}
 
@@ -98,6 +98,6 @@
 		}
 	}
 	.close{
-		font-size: 5vw;
+		font-size: 5rem;
 	}
 }
